--- a/en/Whats_New_2.html
+++ b/en/Whats_New_2.html
@@ -1494,7 +1494,7 @@ print: &quot;qqq&quot;; WindowMinimize</pre>
 <li><a title="ConEmu: Сохранение пользовательской цветовой схемы в файл" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=248">Issue 248&nbsp;</a> : Added ability to save / load custom color palette. Сolor palette contains 32 (16+16) colors and setting &#x27;Extend foreground colors&#x27;. Named palettes are stored in the &quot;Colors&quot; subkey of reg/xml settings. </li>
 <li><a title="Configure launch new session menu" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=445">Issue 445&nbsp;</a> : Added ability to create custom &#x27;Tasks&#x27;. In fact, this is an alias to run one or more applications in new tabs ConEmu. May be configured in &#x27;Tasks&#x27; page of &#x27;Settings&#x27; dialog, and stored in &quot;Tasks&quot; subkey subkey of reg/xml settings. &#x27;Task&#x27; may be used (for example of the {Shells}): </li><ul><li>when you start by specifying the properties of the shortcut: &quot;ConEmu.exe / cmd {Shells}&quot;; </li>
 <li>specifying {Shells} in the &#x27;Command line&#x27; page &#x27;Main&#x27; of &#x27;Settings&#x27; dialog; </li>
-<li>when you create a new console interface ConEmu (<code>+</code> on the toolbar, a list of Recreate-dialog); </li>
+<li>when you create a new console interface ConEmu (<code>[+]</code> on the toolbar, a list of Recreate-dialog); </li>
 <li>from the command line (cmd.exe): &quot;%ConEmuBaseDir%\ConEmuC.exe&quot; / c {Shells} -new_console. </li>
 <li>from the command line (far.exe): conemu:run:{Shells} -new_console  </li></ul><li>Minor fix in debug switch &quot;/ detached&quot;. </li>
 <li>Vista+: When the console is set detache acceptable to the user font size.  </li></ul>
