--- a/ru/Settings.html
+++ b/ru/Settings.html
@@ -86,7 +86,7 @@
 <p><img src="../img/SettingsTasks.png" title="ConEmu settings, Tasks page" alt="ConEmu settings, Tasks page"> </p>
 <p>Здесь вы можете настроить список часто выполняемых задач. Задача - это алиас для запуска одного или более приложений в новых вкладках ConEmu. Задачи сохраняются в настройке (reg/xml) в подключе &quot;Tasks&quot;. Их можно использовать (на примере задачи {Shells}): <ul><li>при запуске, указав в свойствах ярлыка: &quot;ConEmu.exe /cmd {Shells}&quot;; </li>
 <li>указав {Shells} в поле &#x27;Command line&#x27; страницы &#x27;Main&#x27; окна &#x27;Settings&#x27;; </li>
-<li>при создании новой консоли через интерфейс ConEmu (<code>+</code> на тулбаре, список в Recreate-диалоге); </li>
+<li>при создании новой консоли через интерфейс ConEmu (<code>[+]</code> на тулбаре, список в Recreate-диалоге); </li>
 <li>из командной строки cmd.exe: &quot;%ConEmuBaseDir%\ConEmuC.exe&quot; /c {Shells} -new_console. </li>
 <li>из командной строки far.exe: conemu:run:{Shells} -new_console </li></ul></p>
 <p>ConEmu Jump list настраивается тоже здесь. Настройте список задач, в поле «ConEmu arguments for Jump list» можно дополнительно указать иконку, которая будет отображаться в Jump list, например </p>
