Highlight [+] with green background

--- a/en/Settings.html
+++ b/en/Settings.html
@@ -87,7 +87,7 @@
 <p><img src="../img/SettingsTasks.png" title="ConEmu settings, Tasks page" alt="ConEmu settings, Tasks page"> </p>
 <p>Here you can configure a list of common tasks. In fact, this is an alias to run one or more applications in new tabs within ConEmu. These can be configured in the &#x27;Tasks&#x27; page of the &#x27;Settings&#x27; dialog, and stored in the &quot;Tasks&quot; subkey of reg/xml settings. &#x27;Tasks&#x27; may be used as follows (as an example, we will use a task named {Shells}): <ul><li>when you start by specifying the properties of the shortcut: &quot;ConEmu.exe / cmd {Shells}&quot;; </li>
 <li>specifying {Shells} in the &#x27;Command line&#x27; page &#x27;Main&#x27; of &#x27;Settings&#x27; dialog; </li>
-<li>when you create a new console interface ConEmu (<code>[+]</code> on the toolbar, a list of Recreate-dialog); </li>
+<li>when you create a new console interface ConEmu (<code class="plus">[+]</code> on the toolbar, a list of Recreate-dialog); </li>
 <li>from the command line (cmd.exe): &quot;%ConEmuBaseDir%\ConEmuC.exe&quot; / c {Shells} -new_console. </li>
 <li>from the command line (far.exe): conemu:run:{Shells} -new_console </li></ul></p>
 <p>The ConEmu Jump list is set here too. Set up a list of tasks in the field of «ConEmu arguments for Jump list» You can optionally specify the icon that is displayed in the Jump list, for example </p>
