--- a/en/SettingsIntegration.html
+++ b/en/SettingsIntegration.html
@@ -18,7 +18,7 @@ redirect_from: /ru/SettingsIntegration.html
 <p>But it is yours responsibility (on most of OS versions) to provide some free space in your Explorer. For example, turn on ‘View page’ or ‘Details pane’ in Win8&#x27;s before calling one of ConEmu Inside items. </p>
 <p>In that mode, ConEmu can automatically sync directory (change folder in Explorer window and ConEmu will automatically ‘cd’ to this folder in your shell). To enable this mode - click on the ‘Sync’ item in the ConEmu status bar. </p>
 <p>To pop up ConEmu system menu - right click on the leftmost part of the ConEmu status bar. </p>
-<p>To pop up ConEmu ‘Tab’ menu - right click on the <code>[+]</code> item in the ConEmu status bar. </p>
+<p>To pop up ConEmu ‘Tab’ menu - right click on the <code class="plus">[+]</code> item in the ConEmu status bar. </p>
 
 <h2><a name="‘Integration’_page_items_description"></a>‘Integration’ page items description<a href="#‘Integration’_page_items_description" class="section_anchor"></a></h2>
 <p><img src="../img/SettingsIntegration2.png" title="Integration page items description"> </p>
