--- a/en/SplitScreen.html
+++ b/en/SplitScreen.html
@@ -11,7 +11,7 @@ redirect_from: /ru/SplitScreen.html
 <p>As usual, ConEmu provides more than a one way to do any action. </p>
 
 <h3><a name="options_in_‘Create_new_console’_dialog"></a><a href="SplitScreen.html">SplitScreen</a> options in ‘Create new console’ dialog<a href="#options_in_‘Create_new_console’_dialog" class="section_anchor"></a></h3>
-<p>Open ‘Create new console’ dialog by pressing Win+W or <code>[+]</code> toolbar button (note, if you have disabled ‘Create confirmation’ press Win+Shift+W or Shift+<code>[+]</code>) and set up ‘New console split’ options. </p>
+<p>Open ‘Create new console’ dialog by pressing Win+W or <code class="plus">[+]</code> toolbar button (note, if you have disabled ‘Create confirmation’ press Win+Shift+W or Shift+<code class="plus">[+]</code>) and set up ‘New console split’ options. </p>
 
 <h3><a name="From_your_shell_prompt"></a>From your shell prompt<a href="#From_your_shell_prompt" class="section_anchor"></a></h3>
 <p>You may use <code>-new_console:s[&lt;SplitTab&gt;T][&lt;Percents&gt;](H|V)</code> switch appended to any command typed in your prompt. Option ‘Inject <a href="ConEmuHk.html">ConEmuHk</a>’ must be enabled to use this feature. Examples: <ul><li><code>cmd -new_console:s</code> - split current pane, run <code>cmd</code> shell, new pane and old (current) pane become 50% width of current pane. </li>
