Create VersionComparison page

--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -5,7 +5,7 @@ redirect_from: /ru/Whats_New.html
 <h1 id="h0">ConEmu changes log</h1>
 <p>New ConEmu builds arrives often, at least weekly.
 It's recommended to enable <a href="SettingsUpdate.html">Automatic Update</a>
-to get <a href="StableVsPreview.html">Preview or Alpha</a> builds as soon
+to get <a href="VersionComparison.html#release-stages">Preview or Alpha</a> builds as soon
 as they will be released.
 </p>
 
