--- a/donate.html
+++ b/donate.html
@@ -1,5 +1,5 @@
 ---
-title: Support ConEmu development by donation
+title: ConEmu | Support development by donation
 
 description: "You can show your appreciation and support further development and maintaining
    by contributing with bugreporting, funding, documentation, code or anything else."
