--- a/en/AnsiEscapeCodes.html
+++ b/en/AnsiEscapeCodes.html
@@ -1,7 +1,10 @@
 ---
-title: ConEmu ANSI Support - X3.64 and xterm-256
+title: ConEmu | ANSI X3.64 and Xterm-256 Support
 
 description: "List of ANSI sequences supported by ConEmu. Xterm 256 and 24bit colors extension. Usage examples."
+
+bc1_url: /TableOfContents.html#features
+bc1_title: Features
 ---
 
 <!-- Content starts -->
