--- a/en/ConEmuEnvironment.html
+++ b/en/ConEmuEnvironment.html
@@ -1,10 +1,13 @@
 ---
-title: ConEmu Environment Variables
+title: ConEmu | Environment Variables
 
 description: "List of environment variables set by ConEmu.
    Ability to export variables into console processes.
    Cheating with system time and console code page.
    Usage examples."
+
+bc1_url: /TableOfContents.html#features
+bc1_title: Features
 ---
 
 <!-- Content starts -->
