--- a/en/ConEmuFAQ.html
+++ b/en/ConEmuFAQ.html
@@ -1,5 +1,10 @@
 ---
-title: ConEmu FAQ - Frequently Asked Questions
+title: ConEmu | FAQ - Frequently Asked Questions
+
+description: Frequenly asked user questions about ConEmu usage
+
+bc1_url: /TableOfContents.html#conemu
+bc1_title: ConEmu
 ---
 
 <!-- Content starts -->
