--- a/en/ConEmuFolders.html
+++ b/en/ConEmuFolders.html
@@ -1,5 +1,11 @@
 ---
 redirect_from: /ru/ConEmuFolders.html
+
+bc1_url: /TableOfContents.html#conemu
+bc1_title: ConEmu
+
+bc2_url: /Installation.html
+bc2_title: Installation
 ---
 
 <!-- Content starts -->
