--- a/ru/ConEmuEnvironment.html
+++ b/ru/ConEmuEnvironment.html
@@ -1,10 +1,13 @@
 ---
-title: ConEmu Environment Variables - Переменные Окружения
+title: ConEmu | Environment Variables - Переменные Окружения
 
 description: "Список переменных окружения используемых в ConEmu.
   Экспорт переменных в родительские процессы консолей.
   Трюки с системным временем и кодовыми страницами консоли.
   Примеры использования."
+
+bc1_url: /TableOfContents.html#features
+bc1_title: Функции
 ---
 
 <!-- Content starts -->
