--- a/ru/ConEmuFAQ.html
+++ b/ru/ConEmuFAQ.html
@@ -1,5 +1,10 @@
 ---
-title: ConEmu FAQ - Частые вопросы
+title: ConEmu | FAQ - Частые вопросы
+
+description: Частые вопросы пользователей о работе с ConEmu
+
+bc1_url: /TableOfContents.html#conemu
+bc1_title: ConEmu
 ---
 
 <p><font size="4">Содержание</font> <ul><ul><li><a href="#О_главном">О главном</a></li><ul><li><a href="#Q._Что_делать,_если_нашли_ошибку?">Q. Что делать, если нашли ошибку?</a></li>
