--- a/ru/AnsiEscapeCodes.html
+++ b/ru/AnsiEscapeCodes.html
@@ -1,7 +1,10 @@
 ---
-title: ConEmu и поддержка ANSI X3.64 / xterm-256
+title: ConEmu | поддержка ANSI X3.64 и xterm-256
 
 description: "Список кодов ANSI последовательностей поддерживаемых в ConEmu. Xterm 256 и 24bit цветовые расширения. Примеры использования."
+
+bc1_url: /TableOfContents.html#features
+bc1_title: Функции
 ---
 
 <!-- Content starts -->
