Add some titles and descriptions

--- a/ru/Settings.html
+++ b/ru/Settings.html
@@ -1,9 +1,14 @@
 ---
+title: "ConEmu | Settings"
+
+description: "Где хранятся настройки, описание диалога настроек, конвертация из реестра в xml."
 ---
 
 <!-- Content starts -->
 
-<p><font size="5"><strong>Настройка ConEmu</strong></font> <ul><li><a href="#Where_settings_are_stored?">Where settings are stored?</a></li><ul><li><a href="#Registry">Registry</a></li>
+<h1>Настройка ConEmu</h1>
+<p>
+<ul><li><a href="#Where_settings_are_stored?">Where settings are stored?</a></li><ul><li><a href="#Registry">Registry</a></li>
 <li><a href="#ConEmu_.xml">ConEmu .xml</a></li></ul><li><a href="#Manual_change_of_settings">Manual change of settings</a></li><ul><li><a href="#Using_registry">Using registry</a></li>
 <li><a href="#Using_ConEmu_.xml">Using ConEmu .xml</a></li></ul><li><a href="#Диалог_настроек_«Settings»">Диалог настроек «Settings»</a></li><ul><li><a href="#Main">Main</a></li>
 <li><a href="#Size_and_Pos">Size and Pos</a></li>
@@ -26,7 +31,8 @@
 <li><a href="#Far_Manager">Far Manager</a></li>
 <li><a href="#Views">Views</a></li>
 <li><a href="#Info">Info</a></li>
-<li><a href="#Debug">Debug</a></li></ul><li><a href="#Alphabetical">Alphabetical</a></li></ul> </p>
+<li><a href="#Debug">Debug</a></li></ul><li><a href="#Alphabetical">Alphabetical</a></li></ul>
+</p>
 
 <h1 id="h0"><a name="Where_settings_are_stored?"></a>Where settings are stored?<a href="#Where_settings_are_stored?" class="section_anchor"></a></h1>
 <p>ConEmu may store its settings in the Windows registry (HKCU), or in the ConEmu.xml file. </p>
