--- a/ru/SettingsFast.html
+++ b/ru/SettingsFast.html
@@ -1,15 +1,21 @@
 ---
+title: ConEmu | Fast Configuration Dialog
+
+description: "Первый запуск, диалог быстрой конфигурации"
 ---
 
 <!-- Content starts -->
 
-<p><font size="5"><strong>Первый запуск ConEmu</strong></font> <ul><li><a href="#Введение">Введение</a></li>
+<h1>Первый запуск ConEmu</h1>
+<p>
+<ul><li><a href="#Введение">Введение</a></li>
 <li><a href="#Первый_запуск">Первый запуск</a></li><ul><li><a href="#Install_keyboard_hooks">Install keyboard hooks</a></li>
 <li><a href="#Inject_ConEmuHk_.dll_into_processes,_started_in_ConEmu_tabs">Inject ConEmuHk .dll into processes, started in ConEmu tabs</a></li>
 <li><a href="#Enable_automatic_updates">Enable automatic updates</a></li>
 <li><a href="#Disable_ConIme_.exe_autorun_(Vista_only)">Disable ConIme .exe autorun (Vista only)</a></li>
 <li><a href="#После_нажатия_кнопки_«OK»">После нажатия кнопки «OK»</a></li></ul><li><a href="#Теперь_можно_открыть_диалог_настро">Теперь можно открыть диалог настроек</a></li>
-<li><a href="#Ссылки_на_документацию">Ссылки на документацию</a></li></ul> </p>
+<li><a href="#Ссылки_на_документацию">Ссылки на документацию</a></li></ul>
+</p>
 
 <h1 id="h0"><a name="Введение"></a>Введение<a href="#Введение" class="section_anchor"></a></h1>
 <p>На сайт программы регулярно приходят по результатам поискового запроса «настройка ConEmu». Мне, как разработчику, непонятно, что там может быть непонятного ;-) Вопросов не задают ни <a href="Settings.html">здесь (в комментариях)</a>, ни <a href="http://code.google.com/p/conemu-maximus5/issues/list" rel="nofollow">здесь</a>. В общем, если по прочтении нижеизложенного материала вопросы остаются - <a href="http://code.google.com/p/conemu-maximus5/issues/list" rel="nofollow">задавайте</a>. </p>
