--- a/en/Issues.html
+++ b/en/Issues.html
@@ -1,4 +1,7 @@
 ---
+title: "ConEmu | Bugtracker - Issues and suggestions"
+
+description: "You may view existing issues here, report a problem, ask your question."
 ---
 
 <!-- Content starts -->
