--- a/en/Settings.html
+++ b/en/Settings.html
@@ -1,9 +1,14 @@
 ---
+title: "ConEmu | Settings"
+
+description: "Where the settings are stored, Settings dialog description, convertation from registry to xml."
 ---
 
 <!-- Content starts -->
 
-<p><font size="5"><strong>ConEmu setup</strong></font> <ul><li><a href="#Where_settings_are_stored">Where settings are stored</a></li><ul><li><a href="#Registry">Registry</a></li>
+<h1>ConEmu setup</h1>
+<p>
+<ul><li><a href="#Where_settings_are_stored">Where settings are stored</a></li><ul><li><a href="#Registry">Registry</a></li>
 <li><a href="#ConEmu_.xml">ConEmu .xml</a></li></ul><li><a href="#Manual_change_of_settings">Manual change of settings</a></li><ul><li><a href="#Using_registry">Using registry</a></li>
 <li><a href="#Using_ConEmu_.xml">Using ConEmu .xml</a></li></ul><li><a href="#Settings_dialog">Settings dialog</a></li><ul><li><a href="#Main">Main</a></li>
 <li><a href="#Size_and_Pos">Size and Pos</a></li>
@@ -26,7 +31,8 @@
 <li><a href="#Far_Manager">Far Manager</a></li>
 <li><a href="#Views">Views</a></li>
 <li><a href="#Info">Info</a></li>
-<li><a href="#Debug">Debug</a></li></ul><li><a href="#Alphabetical">Alphabetical</a></li></ul>  </p>
+<li><a href="#Debug">Debug</a></li></ul><li><a href="#Alphabetical">Alphabetical</a></li></ul>
+</p>
 
 <h1 id="h0"><a name="Where_settings_are_stored"></a>Where settings are stored<a href="#Where_settings_are_stored" class="section_anchor"></a></h1>
 <p>ConEmu may store its settings in the Windows registry (HKCU), or in the ConEmu.xml file. </p>
