--- a/en/SettingsFast.html
+++ b/en/SettingsFast.html
@@ -1,17 +1,25 @@
 ---
 pagelang: ru
+
+title: "ConEmu | Fast Configuration Dialog"
+
+description: "ConEmu first start, Fast Configuration Dialog"
 ---
 
 <!-- Content starts -->
 
 <p><font size="5"><strong><a href="http://translate.google.ru/translate?hl=ru&amp;sl=ru&amp;tl=en&amp;u=http%3A%2F%2Fcode.google.com%2Fp%2Fconemu-maximus5%2Fwiki%2FSettingsFast%3Fshow%3Dcontent" rel="nofollow">SettingsFast (autotranslated Ru-En)</a></strong></font> <hr/></p>
-<p><font size="5"><strong>ConEmu first start</strong></font> <ul><li><a href="#Abstract">Abstract</a></li>
+
+<h1>ConEmu first start</h1>
+<p>
+<ul><li><a href="#Abstract">Abstract</a></li>
 <li><a href="#Первый_запуск">Первый запуск</a></li><ul><li><a href="#Install_keyboard_hooks">Install keyboard hooks</a></li>
 <li><a href="#Inject_ConEmuHk_.dll_into_processes,_started_in_ConEmu_tabs">Inject ConEmuHk .dll into processes, started in ConEmu tabs</a></li>
 <li><a href="#Enable_automatic_updates">Enable automatic updates</a></li>
 <li><a href="#Disable_ConIme_.exe_autorun_(Vista_only)">Disable ConIme .exe autorun (Vista only)</a></li>
 <li><a href="#После_нажатия_кнопки_«OK»">После нажатия кнопки «OK»</a></li></ul><li><a href="#Теперь_можно_открыть_диалог_настро">Теперь можно открыть диалог настроек</a></li>
-<li><a href="#Ссылки_на_документацию">Ссылки на документацию</a></li></ul>  </p>
+<li><a href="#Ссылки_на_документацию">Ссылки на документацию</a></li></ul>
+</p>
 
 <h1><a name="Abstract"></a>Abstract<a href="#Abstract" class="section_anchor"></a></h1>
 <p><!-- !ConEmu is highly adaptable tool and have great number of settings.
