--- a/en/TabletPC.html
+++ b/en/TabletPC.html
@@ -1,5 +1,9 @@
 ---
 pagelang: ru
+
+title: "ConEmu | Working with touchscreen"
+
+description: "Using ConEmu on TabletPC, gestures and taps."
 ---
 
 <!-- Content starts -->
