--- a/ru/InsideParent.html
+++ b/ru/InsideParent.html
@@ -1,11 +1,21 @@
 ---
+title: "ConEmu | Inside Parent"
+
+description: "В ‘Проводник’ Windows добавляется пункт контекстного меню ‘ConEmu Inside’,
+   при выборе которого ConEmu запускается в ‘области переходов’, внутри окна ‘Проводника’.
+   Похож на режим ‘ConEmu Here’ - текущей папкой в ConEmu устанавливается папка из ‘Проводника’."
 ---
 
 <!-- Content starts -->
 
-<p><font size="5"><strong><a href="http://translate.google.ru/translate?hl=ru&amp;sl=ru&amp;tl=en&amp;u=http%3A%2F%2Fcode.google.com%2Fp%2Fconemu-maximus5%2Fwiki%2FInsideParent%3Fshow%3Dcontent" rel="nofollow">ConEmu Inside (autotranslated Ru-En)</a></strong></font> <hr/></p>
+<header>
+<h1>ConEmu Inside</h1>
 
-<h1><a name="ConEmu_Inside"></a>ConEmu Inside<a href="#ConEmu_Inside" class="section_anchor"></a></h1>
+<p>В ‘Проводник’ Windows добавляется пункт контекстного меню ‘ConEmu Inside’,
+   при выборе которого ConEmu запускается в ‘области переходов’, внутри окна ‘Проводника’.
+   Похож на режим ‘ConEmu Here’ - текущей папкой в ConEmu устанавливается папка из ‘Проводника’. </p>
+</header>
+
 <p>Режим появился когда я наткнулся на вопрос <a href="http://superuser.com/a/441531/139371" rel="nofollow">How to embed PowerShell into Explorer or Explorer-like tool</a>? </p>
 <p>«ConEmu Inside» позволяет запустить ConEmu внутри какого-либо другого окна. <ul><li>Работать в качестве панели в окне проводника - выбираете в контекстном меню для диска/папки/файла пункт «ConEmu Inside» и внутри окна проводника появится настроенный вами shell (cmd/powershell/bash) в текущей папке. </li>
 <li>Работать в качестве дочернего окна в любом выбранном вами окне. Пример сейчас не придумаю, но может кому-то пригодится такой способ интеграции консоли в свое приложение. </li></ul></p>
