--- a/ru/Issues.html
+++ b/ru/Issues.html
@@ -1,4 +1,7 @@
 ---
+title: "ConEmu | Багтрекер - Ошибки и предложения"
+
+description: "Здесь вы можете посмотреть список существующих вопросов и задать свой."
 ---
 
 <!-- Content starts -->
