--- a/ru/TabletPC.html
+++ b/ru/TabletPC.html
@@ -1,4 +1,7 @@
 ---
+title: "ConEmu | Работа с тачскрином"
+
+description: "Использование жестов и тапов для работы с ConEmu"
 ---
 
 <!-- Content starts -->
