Remove CygwinWorkDir.html

--- a/en/CygwinStartDir.html
+++ b/en/CygwinStartDir.html
@@ -1,5 +1,7 @@
 ---
 redirect_from: /ru/CygwinStartDir.html
+redirect_from: /en/CygwinWorkDir.html
+redirect_from: /ru/CygwinWorkDir.html
 ---
 
 <!-- Content starts -->
