Remove CygwinCurDir.html

--- a/en/ShellWorkDir.html
+++ b/en/ShellWorkDir.html
@@ -1,5 +1,7 @@
 ---
 redirect_from: /ru/ShellWorkDir.html
+redirect_from: /ru/CygwinCurDir.html
+redirect_from: /en/CygwinCurDir.html
 ---
 
 <!-- Content starts -->
