--- a/en/AlternativeBuffer.html
+++ b/en/AlternativeBuffer.html
@@ -1,5 +1,7 @@
 ---
 redirect_from: /ru/AlternativeBuffer.html
+
+title: "ConEmu | AlternativeBuffer"
 ---
 
 <!-- Content starts -->
@@ -9,5 +11,7 @@ redirect_from: /ru/AlternativeBuffer.html
 -->
 <p>ConEmu may &quot;pause&quot; your <a href="ConsoleApplication.html">ConsoleApplication</a> output.  Just press Win+A or press the &quot;lock&quot; button on the ToolBar. </p>
 <p>ConEmu will load the entire console back-scroll buffer in memory (that may takes few seconds in some cases) and display it. If any <a href="ConsoleApplication.html">ConsoleApplication</a> will change output in the <a href="RealConsole.html">RealConsole</a> at that time, changes will not be displayed in ConEmu until you exit AlternativeBuffer by pressing Esc or Win+A. </p>
+
+<p>Also, you may press `Pause` key. It will pause most console applications. Press `Pause` key again to release. </p>
 
 <!-- Content ends -->
