Fix utf-8 issue

--- a/en/SettingsDefTerm.html
+++ b/en/SettingsDefTerm.html
@@ -1,7 +1,7 @@
 ---
 redirect_from: /ru/SettingsDefTerm.html
 
-title: "ConEmu | Settings › DefTerm page"
+title: "ConEmu | Settings â€º DefTerm page"
 ---
 
 <!-- Content starts -->
