--- a/en/SettingsFarView.html
+++ b/en/SettingsFarView.html
@@ -1,7 +1,7 @@
 ---
 redirect_from: /ru/SettingsFarView.html
 
-title: "ConEmu | Settings › FarView page"
+title: "ConEmu | Settings â€º FarView page"
 ---
 
 <!-- Content starts -->
