--- a/en/SettingsHighlight.html
+++ b/en/SettingsHighlight.html
@@ -1,7 +1,7 @@
 ---
 redirect_from: /ru/SettingsHighlight.html
 
-title: "ConEmu | Settings › Highlight page"
+title: "ConEmu | Settings â€º Highlight page"
 ---
 
 <!-- Content starts -->
