--- a/en/SettingsInfo.html
+++ b/en/SettingsInfo.html
@@ -1,7 +1,7 @@
 ---
 redirect_from: /ru/SettingsInfo.html
 
-title: "ConEmu | Settings › Info page"
+title: "ConEmu | Settings â€º Info page"
 ---
 
 <!-- Content starts -->
