--- a/en/SettingsPaste.html
+++ b/en/SettingsPaste.html
@@ -1,7 +1,7 @@
 ---
 redirect_from: /ru/SettingsPaste.html
 
-title: "ConEmu | Settings › Paste page"
+title: "ConEmu | Settings â€º Paste page"
 ---
 
 <!-- Content starts -->
