--- a/en/SettingsStatusBar.html
+++ b/en/SettingsStatusBar.html
@@ -1,7 +1,7 @@
 ---
 redirect_from: /ru/SettingsStatusBar.html
 
-title: "ConEmu | Settings › StatusBar page"
+title: "ConEmu | Settings â€º StatusBar page"
 ---
 
 <!-- Content starts -->
