--- a/en/SettingsTransparency.html
+++ b/en/SettingsTransparency.html
@@ -1,7 +1,7 @@
 ---
 redirect_from: /ru/SettingsTransparency.html
 
-title: "ConEmu | Settings › Transparency page"
+title: "ConEmu | Settings â€º Transparency page"
 ---
 
 <!-- Content starts -->
