Don't use slash in bcN_url

--- a/en/AnsiEscapeCodes.html
+++ b/en/AnsiEscapeCodes.html
@@ -3,7 +3,7 @@ title: ConEmu | ANSI X3.64 and Xterm-256 Support
 
 description: "List of ANSI sequences supported by ConEmu. Xterm 256 and 24bit colors extension. Usage examples."
 
-bc1_url: /TableOfContents.html#features
+bc1_url: TableOfContents.html#features
 bc1_title: Features
 ---
 
