--- a/en/ConEmuFAQ.html
+++ b/en/ConEmuFAQ.html
@@ -3,7 +3,7 @@ title: ConEmu | FAQ - Frequently Asked Questions
 
 description: Frequenly asked user questions about ConEmu usage
 
-bc1_url: /TableOfContents.html#conemu
+bc1_url: TableOfContents.html#conemu
 bc1_title: ConEmu
 ---
 
