--- a/en/ConEmuFolders.html
+++ b/en/ConEmuFolders.html
@@ -3,10 +3,10 @@ redirect_from: /ru/ConEmuFolders.html
 
 title: "ConEmu | Installation Folders Structure"
 
-bc1_url: /TableOfContents.html#conemu
+bc1_url: TableOfContents.html#conemu
 bc1_title: ConEmu
 
-bc2_url: /Installation.html
+bc2_url: Installation.html
 bc2_title: Installation
 ---
 
