--- a/ru/ConEmuFAQ.html
+++ b/ru/ConEmuFAQ.html
@@ -3,7 +3,7 @@ title: ConEmu | FAQ - Частые вопросы
 
 description: Частые вопросы пользователей о работе с ConEmu
 
-bc1_url: /TableOfContents.html#conemu
+bc1_url: TableOfContents.html#conemu
 bc1_title: ConEmu
 ---
 
