--- a/ru/AnsiEscapeCodes.html
+++ b/ru/AnsiEscapeCodes.html
@@ -3,7 +3,7 @@ title: ConEmu | поддержка ANSI X3.64 и xterm-256
 
 description: "Список кодов ANSI последовательностей поддерживаемых в ConEmu. Xterm 256 и 24bit цветовые расширения. Примеры использования."
 
-bc1_url: /TableOfContents.html#features
+bc1_url: TableOfContents.html#features
 bc1_title: Функции
 ---
 
