--- a/en/Screenshots.html
+++ b/en/Screenshots.html
@@ -2,6 +2,9 @@
 redirect_from: /ru/Screenshots.html
 
 title: "ConEmu | Screenshots"
+
+bc1_url: TableOfContents.html#conemu
+bc1_title: ConEmu
 ---
 
 <!-- Content starts -->
