--- a/en/WhatsNew.html
+++ b/en/WhatsNew.html
@@ -2,6 +2,9 @@
 redirect_from: /ru/WhatsNew.html
 
 title: "ConEmu | WhatsNew Index"
+
+bc1_url: TableOfContents.html#conemu
+bc1_title: ConEmu
 ---
 
 <!-- Content starts -->
