--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/Whats_New.html
 
 title: "ConEmu | Whats_New 140104..Current"
+
+bc1_url: TableOfContents.html#conemu
+bc1_title: ConEmu
+
+bc2_url: WhatsNew.html
+bc2_title: WhatsNew
 ---
 
 <h1 id="h0">ConEmu changes log</h1>
