--- a/auto.html
+++ b/auto.html
@@ -1,10 +1,10 @@
 ---
 title: ConEmu | automate installation
 
-bc1_url: /TableOfContents.html#conemu
+bc1_url: TableOfContents.html#conemu
 bc1_title: ConEmu
 
-bc2_url: /Installation.html
+bc2_url: Installation.html
 bc2_title: Installation
 ---
 
