--- a/donate.html
+++ b/donate.html
@@ -3,6 +3,9 @@ title: ConEmu | Support development by donation
 
 description: "You can show your appreciation and support further development and maintaining
    by contributing with bugreporting, funding, documentation, code or anything else."
+
+bc1_url: TableOfContents.html#conemu
+bc1_title: ConEmu
 ---
 
 
