--- a/en/Whats_New_1.html
+++ b/en/Whats_New_1.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/Whats_New_1.html
 
 title: "ConEmu | Whats_New 090707..111220"
+
+bc1_url: TableOfContents.html#conemu
+bc1_title: ConEmu
+
+bc2_url: WhatsNew.html
+bc2_title: WhatsNew
 ---
 
 <!-- Content starts -->
