--- a/en/Whats_New_2.html
+++ b/en/Whats_New_2.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/Whats_New_2.html
 
 title: "ConEmu | Whats_New 120101..131225"
+
+bc1_url: TableOfContents.html#conemu
+bc1_title: ConEmu
+
+bc2_url: WhatsNew.html
+bc2_title: WhatsNew
 ---
 
 <!-- Content starts -->
