--- a/en/ChildGui.html
+++ b/en/ChildGui.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/ChildGui.html
 
 title: "ConEmu | ChildGui"
+
+bc1_url: TableOfContents.html#terms
+bc1_title: ConEmu
+
+bc2_url: ConEmuTerms.html
+bc2_title: Terms
 ---
 
 <!-- Content starts -->
