--- a/en/ConEmuHk.html
+++ b/en/ConEmuHk.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/ConEmuHk.html
 
 title: "ConEmu | ConEmuHk - Hooks and Injects"
+
+bc1_url: TableOfContents.html#terms
+bc1_title: ConEmu
+
+bc2_url: ConEmuTerms.html
+bc2_title: Terms
 ---
 
 <!-- Content starts -->
