--- a/en/TerminalVsShell.html
+++ b/en/TerminalVsShell.html
@@ -2,6 +2,14 @@
 redirect_from: /ru/TerminalVsShell.html
 
 title: "ConEmu | Terminal vs Shell"
+
+description: "The difference between ‘terminal’ and ‘shell’"
+
+bc1_url: TableOfContents.html#terms
+bc1_title: ConEmu
+
+bc2_url: ConEmuTerms.html
+bc2_title: Terms
 ---
 
 <!-- Content starts -->
