--- a/en/AlternativeBuffer.html
+++ b/en/AlternativeBuffer.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/AlternativeBuffer.html
 
 title: "ConEmu | Pause and Alternative Buffer"
+
+bc1_url: TableOfContents.html#terms
+bc1_title: ConEmu
+
+bc2_url: ConEmuTerms.html
+bc2_title: Terms
 ---
 
 <!-- Content starts -->
