--- a/en/AppsKey.html
+++ b/en/AppsKey.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/AppsKey.html
 
 title: "ConEmu | Where is an Apps Key?"
+
+bc1_url: TableOfContents.html#terms
+bc1_title: ConEmu
+
+bc2_url: ConEmuTerms.html
+bc2_title: Terms
 ---
 
 <!-- Content starts -->
