--- a/en/RealConsole.html
+++ b/en/RealConsole.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/RealConsole.html
 
 title: "ConEmu | RealConsole"
+
+bc1_url: TableOfContents.html#terms
+bc1_title: ConEmu
+
+bc2_url: ConEmuTerms.html
+bc2_title: Terms
 ---
 
 <!-- Content starts -->
