--- a/en/StatusBar.html
+++ b/en/StatusBar.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/StatusBar.html
 
 title: "ConEmu | StatusBar"
+
+bc1_url: TableOfContents.html#terms
+bc1_title: ConEmu
+
+bc2_url: ConEmuTerms.html
+bc2_title: Terms
 ---
 
 <!-- Content starts -->
