--- a/en/WinApi.html
+++ b/en/WinApi.html
@@ -2,6 +2,12 @@
 redirect_from: /ru/WinApi.html
 
 title: "ConEmu | WinApi Definition"
+
+bc1_url: TableOfContents.html#terms
+bc1_title: ConEmu
+
+bc2_url: ConEmuTerms.html
+bc2_title: Terms
 ---
 
 <!-- Content starts -->
