--- a/en/ConEmuArgs.html
+++ b/en/ConEmuArgs.html
@@ -4,6 +4,12 @@ redirect_from: /ru/Command_Line.html
 redirect_from: /ru/ConEmuArgs.html
 
 title: "ConEmu | ConEmu.exe Command Line Switches"
+
+bc1_url: TableOfContents.html#launch-apps
+bc1_title: Launch Apps
+
+bc2_url: CommandLine.html
+bc2_title: Switches
 ---
 
 <!-- Content starts -->
