--- a/en/ConEmuC.html
+++ b/en/ConEmuC.html
@@ -6,6 +6,12 @@ title: ConEmu | ConEmuC - Console Part of ConEmu
 description: "ConEmuC implements full-featured console window.
    Also it can be used from command line to do many jobs like
    posting GuiMacro, downloading files, exporting environment and more."
+
+bc1_url: TableOfContents.html#launch-apps
+bc1_title: Launch Apps
+
+bc2_url: CommandLine.html
+bc2_title: Switches
 ---
 
 <!-- Content starts -->
