--- a/en/DefaultTerminal.html
+++ b/en/DefaultTerminal.html
@@ -6,6 +6,9 @@ redirect_from: /ru/DefaultTerminal.html
 title: "ConEmu | DefaultTerminal"
 
 description: "The only way to replace default Windows terminal"
+
+bc1_url: TableOfContents.html#launch-apps
+bc1_title: Launch Apps
 ---
 
 <!-- Content starts -->
