--- a/en/LaunchNewTab.html
+++ b/en/LaunchNewTab.html
@@ -2,6 +2,9 @@
 redirect_from: /ru/LaunchNewTab.html
 
 title: "ConEmu | Launch New Tab"
+
+bc1_url: TableOfContents.html#launch-apps
+bc1_title: Launch Apps
 ---
 
 <!-- Content starts -->
