--- a/en/RestartTab.html
+++ b/en/RestartTab.html
@@ -2,6 +2,9 @@
 redirect_from: /ru/RestartTab.html
 
 title: "ConEmu | RestartTab"
+
+bc1_url: TableOfContents.html#launch-apps
+bc1_title: Launch Apps
 ---
 
 <!-- Content starts -->
