--- a/en/CommandLine.html
+++ b/en/CommandLine.html
@@ -2,6 +2,9 @@
 redirect_from: /ru/CommandLine.html
 
 title: "ConEmu | CommandLine - GUI, Console and Shells switches"
+
+bc1_url: TableOfContents.html#launch-apps
+bc1_title: Launch Apps
 ---
 
 <!-- Content starts -->
