--- a/en/DosBox.html
+++ b/en/DosBox.html
@@ -2,6 +2,9 @@
 redirect_from: /ru/DosBox.html
 
 title: "ConEmu | DosBox integration"
+
+bc1_url: TableOfContents.html#launch-apps
+bc1_title: Launch Apps
 ---
 
 <!-- Content starts -->
