--- a/en/NewConsole.html
+++ b/en/NewConsole.html
@@ -2,6 +2,9 @@
 redirect_from: /ru/NewConsole.html
 
 title: "ConEmu | ‘-new_console’ and ‘-cur_console’ switches"
+
+bc1_url: TableOfContents.html#launch-apps
+bc1_title: Launch Apps
 ---
 
 <!-- Content starts -->
