--- a/en/StartupDir.html
+++ b/en/StartupDir.html
@@ -2,6 +2,9 @@
 redirect_from: /ru/StartupDir.html
 
 title: "ConEmu | Startup Directory"
+
+bc1_url: TableOfContents.html#launch-apps
+bc1_title: Launch Apps
 ---
 
 <!-- Content starts -->
