--- a/en/Tasks.html
+++ b/en/Tasks.html
@@ -2,6 +2,9 @@
 redirect_from: /ru/Tasks.html
 
 title: "ConEmu | Tasks"
+
+bc1_url: TableOfContents.html#launch-apps
+bc1_title: Launch Apps
 ---
 
 <!-- Content starts -->
