--- a/en/TerminalVsShell.html
+++ b/en/TerminalVsShell.html
@@ -3,7 +3,7 @@ redirect_from: /ru/TerminalVsShell.html
 
 title: "ConEmu | Terminal vs Shell"
 
-description: "The difference between ‘terminal’ and ‘shell’"
+description: "The difference between â€˜terminalâ€™ and â€˜shellâ€™"
 
 bc1_url: TableOfContents.html#terms
 bc1_title: ConEmu
