Update downloads page

--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -2,19 +2,36 @@
 redirect_from: /ru/Downloads.html
 
 title: "ConEmu | Downloads"
+
+description: "ConEmu Download Mirrors"
+
+sa1_url: VersionComparison.html
+sa1_title: "Version comparison: distros, bitness, stages"
+
+sa2_url: Installation.html
+sa2_title: "How to properly install ConEmu"
+
+sa3_url: SettingsFast.html
+sa3_title: "First start: Fast Configuration Dialog"
 ---
 
 <!-- Content starts -->
 
-<p><table cellpadding="0" cellspacing="0" border="0" width="100%">
-<tr><td align="left" valign="top" colspan="3" width="550"> </p>
+<table cellpadding="0" cellspacing="0" border="0" width="100%">
+<tr><td align="left" valign="top" colspan="3" width="550">
 
 <h1 id="h0"><a name="Which_version_to_choose"></a>Which version to choose<a href="#Which_version_to_choose" class="section_anchor"></a></h1>
 <p>‘Preview’ builds are recommended for most users. At the moment, last ‘Stable’ is very old and ‘Preview’ coming to be ‘Stable’ soon. Read more about <a href="VersionComparison.html#release-stages">release stages</a>. </p>
 
 <h1><a name="Download_mirrors_(official)"></a>Download mirrors (official)<a href="#Download_mirrors_(official)" class="section_anchor"></a></h1>
-<p></td> <td align="left" valign="top" rowspan="2"><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow"><img border="0" src="http://s1.softpedia-static.com/base_img/softpedia_free_award_f.gif"></img></a></td> </tr>
-<tr> <td width="265" height="50" align="left" valign="center"><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow"><img src="../img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a></td> <td width="70" height="50" align="left" valign="center">Primary</td> <td width="215"> </td> </tr> </table> </p>
+<p></td> <td align="left" valign="top" rowspan="2"><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow"><img border="0" src="http://s1.softpedia-static.com/base_img/softpedia_free_award_f.gif"></img></a></td>
+</tr>
+<tr>
+	<td width="265" height="50" align="left" valign="center"><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow"><img src="../img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a></td>
+	<td width="70" height="50" align="left" valign="center">Primary</td>
+	<td width="215"> </td>
+</tr>
+</table>
 
 <h3><a name="Official_mirrors"></a>Official mirrors<a href="#Official_mirrors" class="section_anchor"></a></h3>
 <ul><li><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow">Fosshub.com</a> </li>
