Simplify ReadAlso definition

--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -5,14 +5,13 @@ title: "ConEmu | Downloads"
 
 description: "ConEmu Download Mirrors"
 
-sa1_url: VersionComparison.html
-sa1_title: "Version comparison: distros, bitness, stages"
-
-sa2_url: Installation.html
-sa2_title: "How to properly install ConEmu"
-
-sa3_url: SettingsFast.html
-sa3_title: "First start: Fast Configuration Dialog"
+readalso:
+ - url: VersionComparison.html
+   title: "Comparison: distros, bitness, stages"
+ - url: Installation.html
+   title: "How to properly install ConEmu"
+ - url: SettingsFast.html
+   title: "First start: Fast Configuration Dialog"
 ---
 
 <!-- Content starts -->
